--- a/Allilepidrasi/Allilepidrasi.csproj
+++ b/Allilepidrasi/Allilepidrasi.csproj
@@ -57,6 +57,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -65,20 +71,23 @@
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form3.resx">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -90,6 +99,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\backbutton.png" />
+    <None Include="Images\bathroom.jpg" />
+    <None Include="Images\bedroom.jpeg" />
+    <None Include="Images\livingroom.jpg" />
+    <None Include="Images\kitchen.jpg" />
+    <None Include="Images\bathroomDark.jpg" />
+    <None Include="Images\bedroomDark.jpg" />
+    <None Include="Images\livingroomDark.jpg" />
+    <None Include="Images\kitchenDark.jpg" />
     <Content Include="Images\Steel-Background-Desktop-Wallpaper-14566.jpg" />
     <None Include="Resources\BackButtonImage.bmp" />
   </ItemGroup>
