--- a/Allilepidrasi/Allilepidrasi.csproj
+++ b/Allilepidrasi/Allilepidrasi.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form4.Designer.cs">
+      <DependentUpon>Form4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -73,6 +79,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form4.resx">
+      <DependentUpon>Form4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -99,6 +108,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\backbutton.png" />
+    <None Include="Images\Sweatpants.jpg" />
+    <None Include="Images\Tribaloski.jpg" />
+    <None Include="Images\TuxedoPants.jpg" />
+    <None Include="Images\Tuxedo.png" />
     <None Include="Images\bathroom.jpg" />
     <None Include="Images\bedroom.jpeg" />
     <None Include="Images\livingroom.jpg" />
@@ -107,6 +120,12 @@
     <None Include="Images\bedroomDark.jpg" />
     <None Include="Images\livingroomDark.jpg" />
     <None Include="Images\kitchenDark.jpg" />
+    <None Include="Images\closet.jpg" />
+    <None Include="Images\hoodie.jpg" />
+    <None Include="Images\jeans.jpg" />
+    <None Include="Images\sneakers.JPG" />
+    <None Include="Images\DressShoes.jpg" />
+    <None Include="Images\Boots.jpg" />
     <Content Include="Images\Steel-Background-Desktop-Wallpaper-14566.jpg" />
     <None Include="Resources\BackButtonImage.bmp" />
   </ItemGroup>
