--- a/Allilepidrasi/Allilepidrasi.csproj
+++ b/Allilepidrasi/Allilepidrasi.csproj
@@ -130,6 +130,7 @@
     <None Include="Images\Cooling.png" />
     <None Include="Images\Heating.png" />
     <None Include="Images\background1.jpg" />
+    <None Include="Images\Help-icon1.png" />
     <Content Include="Images\Steel-Background-Desktop-Wallpaper-14566.jpg" />
     <None Include="Resources\BackButtonImage.bmp" />
   </ItemGroup>
